-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 7.0.0-beta1
-
None
When the following compile output is parsed the error in C:\dev\src\qc\src\libs\utils\qtcprocess.cpp(642) is not added to the Issues pane:
09:30:45: Running steps for project QtCreator... 09:30:45: Starting: "C:\Qt\Tools\CMake_64\bin\cmake.exe" --build C:/tmp/dev/build/qc/qc-6_2_2-Debug --target all [1/1546 8.9/sec] Running utility command for copy_python_dll [2/1546 15.5/sec] Copy themes/ into build directory [3/1546 5.7/sec] Linking CXX shared library bin\Aggregation.dll [4/1546 7.6/sec] Linking CXX shared library bin\yaml-cpp.dll [5/1546 9.4/sec] Linking CXX shared library bin\Sqlite.dll [6/1546 10.7/sec] Linking CXX shared library bin\qlitehtml7.dll [7/1546 12.5/sec] Linking CXX shared library bin\LanguageUtils.dll [8/1546 14.2/sec] Linking CXX shared library bin\KSyntaxHighlighting.dll [9/1546 15.6/sec] Linking CXX shared library lib\qtcreatorcdbext64\qtcreatorcdbext.dll [10/1546 14.8/sec] Linking CXX shared library bin\GLSL.dll [11/1546 15.8/sec] Copy qmldesigner/ into build directory [12/1546 8.4/sec] Building CXX object src\tools\sdktool\CMakeFiles\sdktool.dir\settings.cpp.obj [13/1546 9.0/sec] Building CXX object src\tools\qtcdebugger\CMakeFiles\qtcdebugger.dir\main.cpp.obj [14/1546 8.7/sec] Linking CXX executable bin\qtcdebugger.exe [15/1546 8.8/sec] Building CXX object src\tools\sdktool\CMakeFiles\sdktool.dir\main.cpp.obj [16/1546 8.9/sec] Automatic MOC and UIC for target Utils [17/1546 9.2/sec] Running AUTOMOC file extraction for target Utils [18/1546 9.5/sec] Linking CXX executable bin\sdktool.exe [19/1546 8.4/sec] Running moc --collect-json for target Utils [20/1546 7.4/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\appmainwindow.cpp.obj [21/1546 5.8/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\detailswidget.cpp.obj [22/1546 5.6/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\proxycredentialsdialog.cpp.obj [23/1546 5.8/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\removefiledialog.cpp.obj [24/1546 6.0/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\theme\theme.cpp.obj [25/1546 6.0/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\wizard.cpp.obj [26/1546 6.0/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\stylehelper.cpp.obj [27/1546 6.0/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\progressindicator.cpp.obj [28/1546 6.0/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\utilsicons.cpp.obj [29/1546 6.2/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\buildablehelperlibrary.cpp.obj [30/1546 6.1/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\shellcommandpage.cpp.obj [31/1546 6.3/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\qtcprocess.cpp.obj FAILED: src/libs/utils/CMakeFiles/Utils.dir/qtcprocess.cpp.obj C:\PROGRA~2\MICROS~2\2019\PROFES~1\VC\Tools\MSVC\1429~1.301\bin\HostX64\x64\cl.exe /nologo /TP -DQT_CONCURRENT_LIB -DQT_CORE5COMPAT_LIB -DQT_CORE_LIB -DQT_CREATOR -DQT_DISABLE_DEPRECATED_BEFORE=0x050900 -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_NO_CAST_TO_ASCII -DQT_NO_JAVA_STYLE_ITERATORS -DQT_QML_LIB -DQT_RESTRICTED_CAST_FROM_ASCII -DQT_TESTCASE_BUILDDIR=\"C:/tmp/dev/build/qc/qc-6_2_2-Debug/src/libs/utils\" -DQT_TESTCASE_SOURCEDIR=\"C:/dev/src/qc/src/libs/utils\" -DQT_TESTLIB_LIB -DQT_USE_QSTRINGBUILDER -DQT_WIDGETS_LIB -DQT_XML_LIB -DRELATIVE_DATA_PATH=\"../share/qtcreator\" -DRELATIVE_DOC_PATH=\"../share/doc/qtcreator\" -DRELATIVE_LIBEXEC_PATH=\"\" -DRELATIVE_PLUGIN_PATH=\"../lib/qtcreator/plugins\" -DSRCDIR=\"C:/dev/src/qc/src/libs/utils\" -DUNICODE -DUTILS_LIBRARY -DUtils_EXPORTS -DWIN32 -DWIN64 -DWITH_TESTS -D_CRT_SECURE_NO_WARNINGS -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_SCL_SECURE_NO_WARNINGS -D_UNICODE -D_WIN64 -IC:\tmp\dev\build\qc\qc-6_2_2-Debug\src\libs\utils -IC:\dev\src\qc\src\libs\utils -IC:\tmp\dev\build\qc\qc-6_2_2-Debug\src\libs\utils\Utils_autogen\include -IC:\dev\src\qc\src\libs -IC:\dev\build\qt6.2\qtbase\include -IC:\dev\build\qt6.2\qtbase\include\QtQml -IC:\dev\build\qt6.2\qtbase\include\QtCore -IC:\dev\build\qt6.2\qtbase\mkspecs\win32-msvc -IC:\dev\build\qt6.2\qtbase\include\QtNetwork -IC:\dev\build\qt6.2\qtbase\include\QtXml -IC:\dev\build\qt6.2\qtbase\include\QtTest -IC:\dev\build\qt6.2\qtbase\include\QtConcurrent -IC:\dev\build\qt6.2\qtbase\include\QtGui -IC:\dev\build\qt6.2\qtbase\include\QtWidgets -IC:\dev\build\qt6.2\qtbase\include\QtCore5Compat /DWIN32 /D_WINDOWS /GR /EHsc /Zi /Ob0 /Od /RTC1 -MDd -Zc:__cplusplus -permissive- -utf-8 -std:c++17 /YuC:/tmp/dev/build/qc/qc-6_2_2-Debug/src/libs/3rdparty/syntax-highlighting/CMakeFiles/QtCreatorPchGui.dir/cmake_pch.hxx /FpC:/tmp/dev/build/qc/qc-6_2_2-Debug/src/libs/3rdparty/syntax-highlighting/CMakeFiles/QtCreatorPchGui.dir/./cmake_pch.cxx.pch /FIC:/tmp/dev/build/qc/qc-6_2_2-Debug/src/libs/3rdparty/syntax-highlighting/CMakeFiles/QtCreatorPchGui.dir/cmake_pch.hxx /showIncludes /Fosrc\libs\utils\CMakeFiles\Utils.dir\qtcprocess.cpp.obj /Fdsrc\libs\utils\Utils.dir\QtCreatorPchGui.pdb /FS -c C:\dev\src\qc\src\libs\utils\qtcprocess.cpp C:\dev\src\qc\src\libs\utils\qtcprocess.cpp(642): error C2039: 'setNativeArguments': is not a member of 'Utils::Internal::ProcessInterface' C:\dev\src\qc\src\libs\utils\qtcprocess.cpp(232): note: see declaration of 'Utils::Internal::ProcessInterface' [32/1546 6.4/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\terminalprocess.cpp.obj [33/1546 6.5/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\archive.cpp.obj [34/1546 6.6/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\crumblepath.cpp.obj [35/1546 6.7/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\pathchooser.cpp.obj [36/1546 6.8/sec] Building CXX object src\tools\clangbackend\source\CMakeFiles\clangbackend_lib.dir\commandlinearguments.cpp.obj [37/1546 6.9/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\detailsbutton.cpp.obj [38/1546 7.0/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\outputformatter.cpp.obj [39/1546 7.2/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\projectintropage.cpp.obj [40/1546 7.2/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\variablechooser.cpp.obj [41/1546 7.1/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\shellcommand.cpp.obj [42/1546 6.7/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\filewizardpage.cpp.obj [43/1546 6.7/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\infolabel.cpp.obj [44/1546 6.6/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\icon.cpp.obj [45/1546 6.7/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\aspects.cpp.obj [46/1546 6.7/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\historycompleter.cpp.obj [47/1546 6.7/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\fancylineedit.cpp.obj [48/1546 6.6/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\infobar.cpp.obj [49/1546 4.9/sec] Building CXX object src\libs\utils\CMakeFiles\Utils.dir\Utils_autogen\mocs_compilation.cpp.obj ninja: build stopped: subcommand failed. 09:30:57: The process "C:\Qt\Tools\CMake_64\bin\cmake.exe" exited with code 1. Error while building/deploying project QtCreator (kit: 6.2.3) When executing step "Build" 09:30:57: Elapsed time: 00:12.
Reproducible with a qt creator checkout of 2cb64471a59133d2b073b9d14bb0f270a27260b
For Gerrit Dashboard: QTCREATORBUG-27056 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
395704,2 | ProjectExplorer: Linkify main diagnostic location in MSVC output parser | 7.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
396742,2 | ProjectExplorer: Make MSVC parser task creation more similar to GCC's | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |