ProjectExplorer: Make MSVC parser task creation more similar to GCC's

That is, for multi-line tasks, have the full raw output in the details,
including the line from which we created the summary. Otherwise, only
file links from potentially less important continuation lines will appear
in the details, which confuses users.

Task-number: QTCREATORBUG-27056
Change-Id: I346e7d96f2c52a74a03462a390a45d6c563200f2
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: David Schulz <david.schulz@qt.io>